index page added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cyber Forensic Tools</title>
+    <link rel="stylesheet" href="CSS/Index.css">
 </head>
 <body>
-    
+    <div>
+        <video class="hero-video" autoplay muted loop>
+            <source src="Animation/hero-video.mp4" type="video/mp4">
+        </video> 
+    </div>
+
+    <div class="hero-overlay"></div>
+
+    <h1 class="ani">Cyber Forensic Tools</h1>
+    <p>
+        
+    </p>
+    <button class="ani" onclick="location.href='HTML/Main.html'">Click Here</button>
+
 </body>
 </html>
+
